upgrade maven plugins, use jakarta